# monadic-harness

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 00-overview.md  01-entropy-and-monads.md  02-control-flow.md  03-data-flow.md  04-python-driver.md  05-skill-protocol.md  06-concurrency.md  07-invariants-and-escalation.md  08-user-interface.md  specs.md
scripts/: check_spec_coverage.py
src/pymh/: __init__.py  __main__.py  cli.py  compiler.py  conditions.py  decide.py  observe.py  report.py  resume.py  state.py  workspace.py
src/pymh/data/skill/: SKILL.md  observation-schema.md  plan-format.md  principles.md
src/pymh/data/templates/: general.yaml  migration.yaml  research.yaml
src/pymh/schemas/: defaults.py
tests/: conftest.py  test_cli.py  test_compiler.py  test_conditions.py  test_decide.py  test_e2e.py  test_observe.py  test_parallel_properties.py  test_report.py  test_resume.py  test_setup.py  test_workspace.py
tests/fixtures/: plan_cycle.yaml  plan_invalid_duplicate_ids.yaml  plan_invalid_no_plan.yaml  plan_invalid_no_steps.yaml  plan_minimal.yaml  plan_parallel.yaml  plan_sequential.yaml
